--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.1"
-          memory: 10M
+          cpus: "0.2"
+          memory: 20M
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
@@ -24,8 +24,8 @@ services:
       context: .
     environment:
       - spring.r2dbc.url=r2dbc:postgresql://postgress:5432/rinha
-      - spring.r2dbc.pool.initial-size=40
-      - spring.r2dbc.pool.max-size=200
+      - spring.r2dbc.pool.initial-size=10
+      - spring.r2dbc.pool.max-size=100
 
   app-2:
     <<: *app-base
@@ -34,13 +34,12 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.4"
-          memory: 284M
+          cpus: "0.3"
+          memory: 274M
     image: postgres:alpine
+    command: postgres -c 'max_connections=500'
     volumes:
       - ./scripts:/docker-entrypoint-initdb.d
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
