--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,18 @@
-events {}
+worker_processes 8;
+
+events {
+    worker_connections 2048;
+}
+
 http {
+    access_log off;
+
+    keepalive_timeout 75;
+    keepalive_requests 200;
+
     upstream backend {
-        server app-1:8080;
-        server app-2:8080;
+        server localhost:8080;
+        server localhost:8081;
     }
 
     server {
