--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,16 @@
-worker_processes 8;
+worker_processes 2;
 
 events {
-    worker_connections 2048;
+    use epoll;
+    worker_connections 400;
 }
 
 http {
     access_log off;
 
-    keepalive_timeout 75;
-    keepalive_requests 200;
-
     upstream backend {
-        server localhost:8080;
-        server localhost:8081;
+        server app-1:8080;
+        server app-2:8080;
     }
 
     server {
@@ -20,10 +18,6 @@ http {
 
         location / {
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
