--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   lb:
+    container_name: nginx
     deploy:
       resources:
         limits:
@@ -9,12 +10,11 @@ services:
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - "9999:9999"
     depends_on:
       - app-1
 
   app-1: &app-base
+    container_name: app-1
     deploy:
       resources:
         limits:
@@ -28,9 +28,11 @@ services:
       - spring.r2dbc.pool.max-size=100
 
   app-2:
+    container_name: app-2
     <<: *app-base
 
   postgress:
+    container_name: postgress
     deploy:
       resources:
         limits:
