--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
           memory: 160M
     build:
       context: .
+    image: daviddeltasierra/rinha-2024-q1-reactor
     environment:
       - spring.r2dbc.url=r2dbc:postgresql://postgress:5432/rinha
       - spring.r2dbc.pool.initial-size=80
