--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,11 @@ services:
       resources:
         limits:
           cpus: "0.1"
-          memory: 10M
+          memory: 30M
     image: nginx
+    network_mode: host
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - "9999:9999"
     depends_on:
       - app-1
 
@@ -21,16 +20,18 @@ services:
       resources:
         limits:
           cpus: "0.6"
-          memory: 200M
+          memory: 190M
     build:
       context: .
     image: daviddeltasierra/rinha-2024-q1-reactor
+    network_mode: host
     environment:
-      - spring.r2dbc.url=r2dbc:postgresql://postgress:5432/rinha
+      - server.port=8080
+      - spring.r2dbc.url=r2dbc:postgresql://localhost:5432/rinha
       - spring.r2dbc.username=postgres
       - spring.r2dbc.password=root
-      - spring.r2dbc.pool.initial-size=10
-      - spring.r2dbc.pool.max-size=10
+      - spring.r2dbc.pool.initial-size=5
+      - spring.r2dbc.pool.max-size=5
     depends_on:
       postgress:
         condition: service_healthy
@@ -38,6 +39,8 @@ services:
   app-2:
     container_name: app-2
     <<: *app-base
+    environment:
+      - server.port=8081
 
   postgress:
     container_name: postgress
@@ -47,6 +50,7 @@ services:
           cpus: "0.2"
           memory: 140M
     image: postgres:alpine
+    network_mode: host
     user: postgres
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
