--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
     image: postgres:alpine
     network_mode: host
     user: postgres
+    command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c shared_buffers=140MB
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
       interval: 10s
